# graph_process_manager_loggers

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  logger.rs
src/graphviz/: drawer.rs  format.rs  implem.rs  item.rs  logger.rs  mod.rs  process_drawer_trait.rs  util.rs
src/graphviz/builtin/: builtin_process_drawer_trait.rs  filtration_drawer.rs  implement.rs  mod.rs  node_drawer.rs  proof_drawer.rs  step_drawer.rs
src/graphviz/drawers/: all_the_rest_drawer.rs  drawer.rs  legend_writer.rs  mod.rs  node_drawer.rs
src/graphviz_logger/: drawer.rs  format.rs  implem.rs  logger.rs  mod.rs
src/nfait/: builder.rs  implem.rs  logger.rs  mod.rs  printer.rs
src/nodesprint/: implem.rs  logger.rs  mod.rs  printer.rs
src/stepstrace/: implem.rs  logger.rs  mod.rs  object.rs  printer.rs
src/tests/: fibo_test.rs  mod.rs  tree_of_trees_test.rs  tree_test.rs
src/tests/fibo_proc/: conf.rs  context.rs  filter.rs  filtration.rs  handler.rs  mod.rs  node.rs  priorities.rs  state.rs  step.rs
src/tests/fibo_proc/filter/: elim.rs  filter.rs  mod.rs
src/tests/fibo_proc/loggers/: mod.rs
src/tests/fibo_proc/loggers/glog/: all_the_rest_drawer.rs  drawer.rs  legend_writer.rs  node_drawer.rs
src/tests/fibo_proc/loggers/nfait/: mod.rs  printer.rs
src/tests/fibo_proc/loggers/nlog/: printer.rs
src/tests/fibo_proc/loggers/slog/: mod.rs  object.rs  printer.rs
src/tests/fibo_proc/verdict/: global.rs  local.rs  mod.rs
src/tests/tree_of_trees_proc/: conf.rs  context.rs  handler.rs  node.rs  priorities.rs  step.rs
src/tests/tree_of_trees_proc/filter/: elim.rs  filter.rs
src/tests/tree_of_trees_proc/loggers/glog/: drawer.rs  mod.rs  node_drawer.rs  step_drawer.rs  util.rs
src/tests/tree_of_trees_proc/loggers/glog/common/: mod.rs
src/tests/tree_of_trees_proc/verdict/: global.rs  local.rs
src/tests/tree_proc/: conf.rs  context.rs  filter.rs  filtration.rs  handler.rs  mod.rs  node.rs  priorities.rs  state.rs  step.rs
src/tests/tree_proc/filter/: elim.rs  filter.rs
src/tests/tree_proc/loggers/glog/: drawer.rs  mod.rs
src/tests/tree_proc/verdict/: global.rs  local.rs
tests/: loggers_test.rs
