[package]
name = "graph_process_manager_loggers"
version = "0.3.0"
authors = ["Erwan Mahe"]
edition = "2021"

license = "Apache-2.0"
description = "Generic loggers for graph_process_manager_core"

readme = "README.md"
repository = "https://github.com/erwanM974/graph_process_manager_loggers"
homepage = "https://github.com/erwanM974/graph_process_manager_loggers"

keywords = ["graph", "tree", "process", "traversal", "heuristics"]


[features]
default  = ["graphviz","nfait"]
graphviz = ["dep:graphviz_dot_builder"]
nfait    = ["dep:graphviz_dot_builder","dep:autour_core"]


[dependencies]
maplit                     = "1.0.2"   # for !hashset macro etc
graph_process_manager_core = "0.3.0"   

graphviz_dot_builder       = { version = "0.1.5", optional = true }
autour_core                = { version = "0.1.12", optional = true }


[dev-dependencies]
ab_glyph           = "0.2.23"
image              = "0.25.0"
imageproc          = "0.25.0"
image_colored_text = "0.1.3"
